--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -138,7 +138,7 @@
           background-color: #9fe8df;
         }
         @media only screen and (max-width: 376px) {
-          padding: 1rem 9rem !important;
+          padding: 1rem 32vw !important;
         }
       }
 
