--- a/sass/main.css
+++ b/sass/main.css
@@ -218,7 +218,7 @@ body {
 
 @media only screen and (max-width: 376px) {
   .container .sub-section__result-section .Reset-btn {
-    padding: 1rem 9rem !important;
+    padding: 1rem 32vw !important;
   }
 }
 
